Change endpoint from /v1/pulls to /v1/clusters
